[metadata]
name = android-bundle-uploader
version = 0.0.1
author = German Robayo
author_email = germanrobayo33@gmail.com
description = Small and simple python script that uploads an Android App Bundle to the Google Play Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/german1608/android-bundle-uploader
project_urls =
    Bug Tracker = https://github.com/german1608/android-bundle-uploader
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
  cachetools~=3.1
  google-api-python-client~=1.7
  google-auth~=1.6
  google-auth-httplib2~=0.0.3
  httplib2~=0.13.1
  oauth2client~=4.1
  pyasn1~=0.4.7
  pyasn1-modules~=0.2.6
  rsa~=4.0
  six~=1.12
  uritemplate~=3.0

package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    android-bundle-uploader = android_bundle_uploader.main:main
